add multichain handling for bens
